# client_retention

./: .gitignore  README.md  client_retention.ipynb  main.ipynb  models_evals.csv  pyproject.toml  scores.txt  submission.csv
